--- a/style.css
+++ b/style.css
@@ -2255,8 +2255,7 @@ pre {
 }
 
 #team-content .team .member {
-    border: 7px solid #f0485b;
-    border-radius: 100%;
+    border: 2px solid #999;
     height: 200px;
     margin-left: auto;
     margin-right: auto;
