--- a/style.css
+++ b/style.css
@@ -127,7 +127,6 @@ h3 a:hover{
 }
 
 .site-content p {
-  line-height: 2em;
   margin-bottom: 20px;
 }
 
@@ -287,7 +286,7 @@ div.aligncenter {
 }
 .alignleft {
   float: left;
-  margin: 20px 20px 20px 0;
+  margin: 0 20px 30px 0;
 }
 .wp-caption {
   background: #eee;
