--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ div.aligncenter {
 }
 .alignright {
   float: right;
-  margin: 20px 0 20px 20px;
+  margin: 0 0 20px 20px;
 }
 .alignleft {
   float: left;
