--- a/style.css
+++ b/style.css
@@ -705,7 +705,7 @@ ul {
 .emerald-home p {
     font-size: 30px;
     font-weight: 500;
-    padding: 0 100px;
+    padding: 0;
     text-align: center;
     color: #ffffff;
 }
