--- a/style.css
+++ b/style.css
@@ -1423,22 +1423,24 @@ article.attachment {
   -ms-word-wrap: break-word;
   word-wrap: break-word;
 }
-.post .entry-thumbnail,
-article.attachment .entry-thumbnail {
-  margin: 0 20px 20px 0;
-}
+
 .post .entry-thumbnail img,
 article.attachment .entry-thumbnail img {
   max-width: 150px;
   float:left;
   margin: 5px 20px 10px 0;
 }
+.entry-thumbnail{
+	float:left;
+	max-width: 150px;
+	margin: 0 20px 5px 0;
+}
 
-.entry-thumbnail img,
-article.attachment .entry-thumbnail img {
-  max-width: 150px;
-  float:left;
-  margin: 5px 20px 10px 0;
+.entry-thumbnail > .caption{
+	font-size: 70%;
+	line-height:110%;
+	display:inline-block;
+	margin-top:5px;
 }
 
 .post h2.entry-title,
